Fix spacing between actions & height of features
No more "jumping" content on page load

--- a/extras/dev/assets/less/makerbase.less
+++ b/extras/dev/assets/less/makerbase.less
@@ -393,6 +393,7 @@ form.form-inline {
 	}
 	.media {
 		padding: 12px;
+		margin-top: 8px;
 		a {
 		}
 		.media-left a img {
@@ -801,7 +802,7 @@ form.form-inline {
 	}
 	.media {
 		margin-top: 8px;
-		max-height: 100px;
+		height: 76px;
 	}
 	.media-body {
 		a {
